Fixed leaving room for mobile, CSS fix for iframe on mobile

--- a/static/style/media.css
+++ b/static/style/media.css
@@ -33,4 +33,8 @@
         width: 90%;
         margin: 0 auto;
     }
+    iframe {
+        width: 100%;
+        margin: 5px;
+    }
 }
