--- a/static/style/style.css
+++ b/static/style/style.css
@@ -271,11 +271,6 @@ iframe {
     text-align: center;
 }
 
-/* .roomInfo p:nth-of-type(2n + 1) {
-    font-size: 110%;
-    font-weight: bold;
-} */
-
 .found {
     color: green;
     font-weight: bold;
